# aoc2024

./: Cargo.toml
src/: common.rs  day00.rs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  main.rs
